syntax = "proto3";

package connection_limit.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/connection_limit";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;
import "github.com/solo-io/solo-kit/api/external/envoy/api/v2/core/base.proto";

import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";


// This plugin provides configuration options to limit active connections to envoy
// ConnectionLimit can be specified on HTTPGateways and TCPGateways
message ConnectionLimit {
    // The maximum number of active connections for this gateway. Other connection attemps will be dropped.
    google.protobuf.UInt64Value max_active_connections = 1;
    // The time to wait before a connection is dropped.
    google.protobuf.Duration  delay_before_close = 2;
}
